test/neg/neg-new_array3.errc
T cannot be an array type in upcxx::new_array
